version2/build/parser.output
Terminals unused in grammar

   GOTO


State 149 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: PROGRAM ID SEMI routine_head routine_body DOT

    2 routine_head: const_part type_part var_part routine_part

    3 const_part: CONST const_expr_list
    4           | %empty

    5 const_expr_list: const_expr_list ID EQUAL const_value SEMI
    6                | ID EQUAL const_value SEMI

    7 const_value: INTEGER
    8            | REAL
    9            | CHAR
   10            | STRING
   11            | SYS_CON

   12 type_part: TYPE type_decl_list
   13          | %empty

   14 type_decl_list: type_decl_list type_definition
   15               | type_definition

   16 type_definition: ID EQUAL type_decl SEMI

   17 type_decl: simple_type_decl
   18          | array_type_decl

   19 simple_type_decl: SYS_TYPE
   20                 | ID
   21                 | string_type_decl
   22                 | record_type_decl

   23 array_type_decl: ARRAY LB array_range RB OF type_decl

   24 string_type_decl: STR_TYPE

   25 array_range: const_value DOTDOT const_value
   26            | ID DOTDOT ID

   27 record_type_decl: RECORD field_decl_list END

   28 field_decl_list: field_decl_list field_decl
   29                | field_decl

   30 field_decl: name_list COLON type_decl SEMI

   31 name_list: name_list COMMA ID
   32          | ID

   33 var_part: VAR var_decl_list
   34         | %empty

   35 var_decl_list: var_decl_list var_decl
   36              | var_decl

   37 var_decl: name_list COLON type_decl SEMI

   38 routine_part: routine_part function_decl
   39             | routine_part procedure_decl
   40             | %empty

   41 function_decl: FUNCTION ID parameters COLON simple_type_decl SEMI routine_head routine_body SEMI

   42 procedure_decl: PROCEDURE ID parameters SEMI routine_head routine_body SEMI

   43 parameters: LP para_decl_list RP
   44           | LP RP
   45           | %empty

   46 para_decl_list: para_decl_list SEMI para_type_list
   47               | para_type_list

   48 para_type_list: var_para_list COLON type_decl

   49 var_para_list: VAR name_list
   50              | name_list

   51 routine_body: compound_stmt

   52 compound_stmt: PBEGIN stmt_list END

   53 stmt_list: stmt_list stmt SEMI
   54          | %empty

   55 stmt: assign_stmt
   56     | proc_stmt
   57     | compound_stmt
   58     | if_stmt
   59     | repeat_stmt
   60     | while_stmt
   61     | for_stmt
   62     | case_stmt

   63 assign_stmt: left_expr ASSIGN expression

   64 proc_stmt: ID
   65          | ID LP RP
   66          | ID LP args_list RP
   67          | SYS_PROC LP RP
   68          | SYS_PROC
   69          | SYS_PROC LP args_list RP

   70 repeat_stmt: REPEAT stmt_list UNTIL expression

   71 while_stmt: WHILE expression DO stmt

   72 for_stmt: FOR ID ASSIGN expression direction expression DO stmt

   73 direction: TO
   74          | DOWNTO

   75 if_stmt: IF expression THEN stmt else_clause

   76 else_clause: ELSE stmt
   77            | %empty

   78 case_stmt: CASE expression OF case_expr_list END

   79 case_expr_list: case_expr_list case_expr
   80               | case_expr

   81 case_expr: const_value COLON stmt SEMI
   82          | ID COLON stmt SEMI

   83 expression: expression GE expr
   84           | expression GT expr
   85           | expression LE expr
   86           | expression LT expr
   87           | expression EQUAL expr
   88           | expression UNEQUAL expr
   89           | expr

   90 expr: expr PLUS term
   91     | expr MINUS term
   92     | expr OR term
   93     | expr XOR term
   94     | term

   95 term: term MUL factor
   96     | term DIV factor
   97     | term MOD factor
   98     | term AND factor
   99     | term TRUEDIV factor
  100     | factor

  101 factor: left_expr
  102       | ID LP args_list RP
  103       | ID LP RP
  104       | SYS_FUNCT LP args_list RP
  105       | const_value
  106       | LP expression RP
  107       | NOT factor
  108       | MINUS factor
  109       | PLUS factor

  110 left_expr: ID
  111          | left_expr LB expression RB
  112          | left_expr DOT ID

  113 args_list: args_list COMMA expression
  114          | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258) 1
ID (259) 1 5 6 16 20 26 31 32 41 42 64 65 66 72 82 102 103 110 112
CONST (260) 3
ARRAY (261) 23
VAR (262) 33 49
FUNCTION (263) 41
PROCEDURE (264) 42
PBEGIN (265) 52
END (266) 27 52 78
TYPE (267) 12
RECORD (268) 27
INTEGER (269) 7
REAL (270) 8
CHAR (271) 9
STRING (272) 10
SYS_CON (273) 11
SYS_FUNCT (274) 104
SYS_PROC (275) 67 68 69
SYS_TYPE (276) 19
STR_TYPE (277) 24
IF (278) 75
THEN (279) 75
ELSE (280) 76
REPEAT (281) 70
UNTIL (282) 70
WHILE (283) 71
DO (284) 71 72
FOR (285) 72
TO (286) 73
DOWNTO (287) 74
CASE (288) 78
OF (289) 23 78
GOTO (290)
ASSIGN (291) 63 72
EQUAL (292) 5 6 16 87
UNEQUAL (293) 88
LE (294) 85
LT (295) 86
GE (296) 83
GT (297) 84
PLUS (298) 90 109
MINUS (299) 91 108
MUL (300) 95
DIV (301) 96
MOD (302) 97
TRUEDIV (303) 99
AND (304) 98
OR (305) 92
XOR (306) 93
NOT (307) 107
DOT (308) 1 112
DOTDOT (309) 25 26
SEMI (310) 1 5 6 16 30 37 41 42 46 53 81 82
LP (311) 43 44 65 66 67 69 102 103 104 106
RP (312) 43 44 65 66 67 69 102 103 104 106
LB (313) 23 111
RB (314) 23 111
COMMA (315) 31 113
COLON (316) 30 37 41 48 81 82


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
program (63)
    on left: 1, on right: 0
routine_head (64)
    on left: 2, on right: 1 41 42
const_part (65)
    on left: 3 4, on right: 2
const_expr_list (66)
    on left: 5 6, on right: 3 5
const_value (67)
    on left: 7 8 9 10 11, on right: 5 6 25 81 105
type_part (68)
    on left: 12 13, on right: 2
type_decl_list (69)
    on left: 14 15, on right: 12 14
type_definition (70)
    on left: 16, on right: 14 15
type_decl (71)
    on left: 17 18, on right: 16 23 30 37 48
simple_type_decl (72)
    on left: 19 20 21 22, on right: 17 41
array_type_decl (73)
    on left: 23, on right: 18
string_type_decl (74)
    on left: 24, on right: 21
array_range (75)
    on left: 25 26, on right: 23
record_type_decl (76)
    on left: 27, on right: 22
field_decl_list (77)
    on left: 28 29, on right: 27 28
field_decl (78)
    on left: 30, on right: 28 29
name_list (79)
    on left: 31 32, on right: 30 31 37 49 50
var_part (80)
    on left: 33 34, on right: 2
var_decl_list (81)
    on left: 35 36, on right: 33 35
var_decl (82)
    on left: 37, on right: 35 36
routine_part (83)
    on left: 38 39 40, on right: 2 38 39
function_decl (84)
    on left: 41, on right: 38
procedure_decl (85)
    on left: 42, on right: 39
parameters (86)
    on left: 43 44 45, on right: 41 42
para_decl_list (87)
    on left: 46 47, on right: 43 46
para_type_list (88)
    on left: 48, on right: 46 47
var_para_list (89)
    on left: 49 50, on right: 48
routine_body (90)
    on left: 51, on right: 1 41 42
compound_stmt (91)
    on left: 52, on right: 51 57
stmt_list (92)
    on left: 53 54, on right: 52 53 70
stmt (93)
    on left: 55 56 57 58 59 60 61 62, on right: 53 71 72 75 76 81 82
assign_stmt (94)
    on left: 63, on right: 55
proc_stmt (95)
    on left: 64 65 66 67 68 69, on right: 56
repeat_stmt (96)
    on left: 70, on right: 59
while_stmt (97)
    on left: 71, on right: 60
for_stmt (98)
    on left: 72, on right: 61
direction (99)
    on left: 73 74, on right: 72
if_stmt (100)
    on left: 75, on right: 58
else_clause (101)
    on left: 76 77, on right: 75
case_stmt (102)
    on left: 78, on right: 62
case_expr_list (103)
    on left: 79 80, on right: 78 79
case_expr (104)
    on left: 81 82, on right: 79 80
expression (105)
    on left: 83 84 85 86 87 88 89, on right: 63 70 71 72 75 78 83 84
    85 86 87 88 106 111 113 114
expr (106)
    on left: 90 91 92 93 94, on right: 83 84 85 86 87 88 89 90 91 92
    93
term (107)
    on left: 95 96 97 98 99 100, on right: 90 91 92 93 94 95 96 97
    98 99
factor (108)
    on left: 101 102 103 104 105 106 107 108 109, on right: 95 96 97
    98 99 100 107 108 109
left_expr (109)
    on left: 110 111 112, on right: 63 101 111 112
args_list (110)
    on left: 113 114, on right: 66 69 102 104 113


State 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM . ID SEMI routine_head routine_body DOT

    ID  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: PROGRAM ID . SEMI routine_head routine_body DOT

    SEMI  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    1 program: PROGRAM ID SEMI . routine_head routine_body DOT

    CONST  shift, and go to state 6

    $default  reduce using rule 4 (const_part)

    routine_head  go to state 7
    const_part    go to state 8


State 6

    3 const_part: CONST . const_expr_list

    ID  shift, and go to state 9

    const_expr_list  go to state 10


State 7

    1 program: PROGRAM ID SEMI routine_head . routine_body DOT

    PBEGIN  shift, and go to state 11

    routine_body   go to state 12
    compound_stmt  go to state 13


State 8

    2 routine_head: const_part . type_part var_part routine_part

    TYPE  shift, and go to state 14

    $default  reduce using rule 13 (type_part)

    type_part  go to state 15


State 9

    6 const_expr_list: ID . EQUAL const_value SEMI

    EQUAL  shift, and go to state 16


State 10

    3 const_part: CONST const_expr_list .
    5 const_expr_list: const_expr_list . ID EQUAL const_value SEMI

    ID  shift, and go to state 17

    $default  reduce using rule 3 (const_part)


State 11

   52 compound_stmt: PBEGIN . stmt_list END

    $default  reduce using rule 54 (stmt_list)

    stmt_list  go to state 18


State 12

    1 program: PROGRAM ID SEMI routine_head routine_body . DOT

    DOT  shift, and go to state 19


State 13

   51 routine_body: compound_stmt .

    $default  reduce using rule 51 (routine_body)


State 14

   12 type_part: TYPE . type_decl_list

    ID  shift, and go to state 20

    type_decl_list   go to state 21
    type_definition  go to state 22


State 15

    2 routine_head: const_part type_part . var_part routine_part

    VAR  shift, and go to state 23

    $default  reduce using rule 34 (var_part)

    var_part  go to state 24


State 16

    6 const_expr_list: ID EQUAL . const_value SEMI

    INTEGER  shift, and go to state 25
    REAL     shift, and go to state 26
    CHAR     shift, and go to state 27
    STRING   shift, and go to state 28
    SYS_CON  shift, and go to state 29

    const_value  go to state 30


State 17

    5 const_expr_list: const_expr_list ID . EQUAL const_value SEMI

    EQUAL  shift, and go to state 31


State 18

   52 compound_stmt: PBEGIN stmt_list . END
   53 stmt_list: stmt_list . stmt SEMI

    ID        shift, and go to state 32
    PBEGIN    shift, and go to state 11
    END       shift, and go to state 33
    SYS_PROC  shift, and go to state 34
    IF        shift, and go to state 35
    REPEAT    shift, and go to state 36
    WHILE     shift, and go to state 37
    FOR       shift, and go to state 38
    CASE      shift, and go to state 39

    compound_stmt  go to state 40
    stmt           go to state 41
    assign_stmt    go to state 42
    proc_stmt      go to state 43
    repeat_stmt    go to state 44
    while_stmt     go to state 45
    for_stmt       go to state 46
    if_stmt        go to state 47
    case_stmt      go to state 48
    left_expr      go to state 49


State 19

    1 program: PROGRAM ID SEMI routine_head routine_body DOT .

    $default  reduce using rule 1 (program)


State 20

   16 type_definition: ID . EQUAL type_decl SEMI

    EQUAL  shift, and go to state 50


State 21

   12 type_part: TYPE type_decl_list .
   14 type_decl_list: type_decl_list . type_definition

    ID  shift, and go to state 20

    $default  reduce using rule 12 (type_part)

    type_definition  go to state 51


State 22

   15 type_decl_list: type_definition .

    $default  reduce using rule 15 (type_decl_list)


State 23

   33 var_part: VAR . var_decl_list

    ID  shift, and go to state 52

    name_list      go to state 53
    var_decl_list  go to state 54
    var_decl       go to state 55


State 24

    2 routine_head: const_part type_part var_part . routine_part

    $default  reduce using rule 40 (routine_part)

    routine_part  go to state 56


State 25

    7 const_value: INTEGER .

    $default  reduce using rule 7 (const_value)


State 26

    8 const_value: REAL .

    $default  reduce using rule 8 (const_value)


State 27

    9 const_value: CHAR .

    $default  reduce using rule 9 (const_value)


State 28

   10 const_value: STRING .

    $default  reduce using rule 10 (const_value)


State 29

   11 const_value: SYS_CON .

    $default  reduce using rule 11 (const_value)


State 30

    6 const_expr_list: ID EQUAL const_value . SEMI

    SEMI  shift, and go to state 57


State 31

    5 const_expr_list: const_expr_list ID EQUAL . const_value SEMI

    INTEGER  shift, and go to state 25
    REAL     shift, and go to state 26
    CHAR     shift, and go to state 27
    STRING   shift, and go to state 28
    SYS_CON  shift, and go to state 29

    const_value  go to state 58


State 32

   64 proc_stmt: ID .
   65          | ID . LP RP
   66          | ID . LP args_list RP
  110 left_expr: ID .

    LP  shift, and go to state 59

    ELSE      reduce using rule 64 (proc_stmt)
    SEMI      reduce using rule 64 (proc_stmt)
    $default  reduce using rule 110 (left_expr)


State 33

   52 compound_stmt: PBEGIN stmt_list END .

    $default  reduce using rule 52 (compound_stmt)


State 34

   67 proc_stmt: SYS_PROC . LP RP
   68          | SYS_PROC .
   69          | SYS_PROC . LP args_list RP

    LP  shift, and go to state 60

    $default  reduce using rule 68 (proc_stmt)


State 35

   75 if_stmt: IF . expression THEN stmt else_clause

    ID         shift, and go to state 61
    INTEGER    shift, and go to state 25
    REAL       shift, and go to state 26
    CHAR       shift, and go to state 27
    STRING     shift, and go to state 28
    SYS_CON    shift, and go to state 29
    SYS_FUNCT  shift, and go to state 62
    PLUS       shift, and go to state 63
    MINUS      shift, and go to state 64
    NOT        shift, and go to state 65
    LP         shift, and go to state 66

    const_value  go to state 67
    expression   go to state 68
    expr         go to state 69
    term         go to state 70
    factor       go to state 71
    left_expr    go to state 72


State 36

   70 repeat_stmt: REPEAT . stmt_list UNTIL expression

    $default  reduce using rule 54 (stmt_list)

    stmt_list  go to state 73


State 37

   71 while_stmt: WHILE . expression DO stmt

    ID         shift, and go to state 61
    INTEGER    shift, and go to state 25
    REAL       shift, and go to state 26
    CHAR       shift, and go to state 27
    STRING     shift, and go to state 28
    SYS_CON    shift, and go to state 29
    SYS_FUNCT  shift, and go to state 62
    PLUS       shift, and go to state 63
    MINUS      shift, and go to state 64
    NOT        shift, and go to state 65
    LP         shift, and go to state 66

    const_value  go to state 67
    expression   go to state 74
    expr         go to state 69
    term         go to state 70
    factor       go to state 71
    left_expr    go to state 72


State 38

   72 for_stmt: FOR . ID ASSIGN expression direction expression DO stmt

    ID  shift, and go to state 75


State 39

   78 case_stmt: CASE . expression OF case_expr_list END

    ID         shift, and go to state 61
    INTEGER    shift, and go to state 25
    REAL       shift, and go to state 26
    CHAR       shift, and go to state 27
    STRING     shift, and go to state 28
    SYS_CON    shift, and go to state 29
    SYS_FUNCT  shift, and go to state 62
    PLUS       shift, and go to state 63
    MINUS      shift, and go to state 64
    NOT        shift, and go to state 65
    LP         shift, and go to state 66

    const_value  go to state 67
    expression   go to state 76
    expr         go to state 69
    term         go to state 70
    factor       go to state 71
    left_expr    go to state 72


State 40

   57 stmt: compound_stmt .

    $default  reduce using rule 57 (stmt)


State 41

   53 stmt_list: stmt_list stmt . SEMI

    SEMI  shift, and go to state 77


State 42

   55 stmt: assign_stmt .

    $default  reduce using rule 55 (stmt)


State 43

   56 stmt: proc_stmt .

    $default  reduce using rule 56 (stmt)


State 44

   59 stmt: repeat_stmt .

    $default  reduce using rule 59 (stmt)


State 45

   60 stmt: while_stmt .

    $default  reduce using rule 60 (stmt)


State 46

   61 stmt: for_stmt .

    $default  reduce using rule 61 (stmt)


State 47

   58 stmt: if_stmt .

    $default  reduce using rule 58 (stmt)


State 48

   62 stmt: case_stmt .

    $default  reduce using rule 62 (stmt)


State 49

   63 assign_stmt: left_expr . ASSIGN expression
  111 left_expr: left_expr . LB expression RB
  112          | left_expr . DOT ID

    ASSIGN  shift, and go to state 78
    DOT     shift, and go to state 79
    LB      shift, and go to state 80


State 50

   16 type_definition: ID EQUAL . type_decl SEMI

    ID        shift, and go to state 81
    ARRAY     shift, and go to state 82
    RECORD    shift, and go to state 83
    SYS_TYPE  shift, and go to state 84
    STR_TYPE  shift, and go to state 85

    type_decl         go to state 86
    simple_type_decl  go to state 87
    array_type_decl   go to state 88
    string_type_decl  go to state 89
    record_type_decl  go to state 90


State 51

   14 type_decl_list: type_decl_list type_definition .

    $default  reduce using rule 14 (type_decl_list)


State 52

   32 name_list: ID .

    $default  reduce using rule 32 (name_list)


State 53

   31 name_list: name_list . COMMA ID
   37 var_decl: name_list . COLON type_decl SEMI

    COMMA  shift, and go to state 91
    COLON  shift, and go to state 92


State 54

   33 var_part: VAR var_decl_list .
   35 var_decl_list: var_decl_list . var_decl

    ID  shift, and go to state 52

    $default  reduce using rule 33 (var_part)

    name_list  go to state 53
    var_decl   go to state 93


State 55

   36 var_decl_list: var_decl .

    $default  reduce using rule 36 (var_decl_list)


State 56

    2 routine_head: const_part type_part var_part routine_part .
   38 routine_part: routine_part . function_decl
   39             | routine_part . procedure_decl

    FUNCTION   shift, and go to state 94
    PROCEDURE  shift, and go to state 95

    $default  reduce using rule 2 (routine_head)

    function_decl   go to state 96
    procedure_decl  go to state 97


State 57

    6 const_expr_list: ID EQUAL const_value SEMI .

    $default  reduce using rule 6 (const_expr_list)


State 58

    5 const_expr_list: const_expr_list ID EQUAL const_value . SEMI

    SEMI  shift, and go to state 98


State 59
